<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_categories"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/common_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/all"
            android:textColor="@drawable/selector_chip_text_color"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/selector_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/profit_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/profits"
            android:textColor="@drawable/selector_chip_text_color"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/selector_chip_bg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/costs_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/costs"
            android:textColor="@drawable/selector_chip_text_color"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/selector_chip_bg" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_categories" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton_create_new_category"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/green_300"
        app:fabCustomSize="70dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/chip_group_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_left_arrow"
        app:subtitleTextColor="@color/grey_800"
        app:title="Мои категории"
        app:titleTextColor="@color/grey_800" />

</androidx.constraintlayout.widget.ConstraintLayout>